style: fix dark mode to profile component

--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -19,9 +19,6 @@
   position: absolute;
   top: 30px;
   right: 60px;
-}
-
-.card a {
   display: flex;
   cursor: pointer;
   font-size: 1rem;
@@ -87,4 +84,29 @@
   font-weight: 500;
   color: var(--text-light-theme);
   font-size: 1rem;
+}
+
+/* DARK MODE */
+
+body.dark .card {
+  background-color: var(--card-dark-theme);
+  border: 1px solid var(--border-dark-mode);
+}
+
+body.dark .card .card__wrapper .card__wrapper--primary p {
+  color: var(--text-dark-theme);
+}
+
+body.dark .card .card__wrapper .card__wrapper--secondary p:first-child {
+  color: var(--white);
+}
+
+body.dark .card .card__wrapper .card__wrapper--secondary p:nth-child(2) {
+  color: var(--light-grey-text-dark-mode);
+  border: #e0e2e4;
+  background-color: #1f2d4c;
+}
+
+body.dark .card .card__wrapper .card__wrapper--secondary p:last-child {
+  color: var(--light-grey-text-dark-mode);
 }
